; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_crypto.c_free_key_ctx.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_crypto.c_free_key_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.key_ctx = type { i64, i32*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_key_ctx(%struct.key_ctx* %0) #0 {
  %2 = alloca %struct.key_ctx*, align 8
  store %struct.key_ctx* %0, %struct.key_ctx** %2, align 8
  %3 = load %struct.key_ctx*, %struct.key_ctx** %2, align 8
  %4 = getelementptr inbounds %struct.key_ctx, %struct.key_ctx* %3, i32 0, i32 2
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.key_ctx*, %struct.key_ctx** %2, align 8
  %9 = getelementptr inbounds %struct.key_ctx, %struct.key_ctx* %8, i32 0, i32 2
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @cipher_ctx_free(i32* %10)
  %12 = load %struct.key_ctx*, %struct.key_ctx** %2, align 8
  %13 = getelementptr inbounds %struct.key_ctx, %struct.key_ctx* %12, i32 0, i32 2
  store i32* null, i32** %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  %15 = load %struct.key_ctx*, %struct.key_ctx** %2, align 8
  %16 = getelementptr inbounds %struct.key_ctx, %struct.key_ctx* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %30

19:                                               ; preds = %14
  %20 = load %struct.key_ctx*, %struct.key_ctx** %2, align 8
  %21 = getelementptr inbounds %struct.key_ctx, %struct.key_ctx* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @hmac_ctx_cleanup(i32* %22)
  %24 = load %struct.key_ctx*, %struct.key_ctx** %2, align 8
  %25 = getelementptr inbounds %struct.key_ctx, %struct.key_ctx* %24, i32 0, i32 1
  %26 = load i32*, i32** %25, align 8
  %27 = call i32 @hmac_ctx_free(i32* %26)
  %28 = load %struct.key_ctx*, %struct.key_ctx** %2, align 8
  %29 = getelementptr inbounds %struct.key_ctx, %struct.key_ctx* %28, i32 0, i32 1
  store i32* null, i32** %29, align 8
  br label %30

30:                                               ; preds = %19, %14
  %31 = load %struct.key_ctx*, %struct.key_ctx** %2, align 8
  %32 = getelementptr inbounds %struct.key_ctx, %struct.key_ctx* %31, i32 0, i32 0
  store i64 0, i64* %32, align 8
  ret void
}

declare dso_local i32 @cipher_ctx_free(i32*) #1

declare dso_local i32 @hmac_ctx_cleanup(i32*) #1

declare dso_local i32 @hmac_ctx_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
